...
        app:layout_constraintTop_toBottomOf="@+id/searchView_elementi"
        app:layout_constraintBottom_toTopOf="@+id/toolbar_pagina_di_note_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addElemento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#6feca4"
        android:clickable="true"
...
