<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newElementDialog"
    android:layout_width="330dp"
    android:layout_height="300dp"
    android:layout_gravity="center">



...
