...
    android:id="@+id/newPageDialog"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/titoloPaginaNote"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="33dp"
        android:hint="@string/titolo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/submit_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/custom_edit_text" />

    <TextView
        android:id="@+id/inserisci_titolo_paginaNote"
...
